wordpress/templates/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: redis
      app: wordpress
  template:
    metadata:
      name: redis
      labels:
        tier: redis
        app: wordpress
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
