wordpress/templates/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: wordpress
    tier: redis
