wordpress/templates/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: wordpress
    tier: frontend
